--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 17:05:17 2018</p>
+         Last Run: Mon Jul 23 18:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Edge School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 23, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -29,52 +29,40 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>32</td>
-                        <td>95</td>
-                        <td>1</td>
-                        <td>31</td>
-                        <td>NNE</td>
-                        <td>80</td>
-                     </tr>
-                     <tr>
                         <td>07:00 PM</td>
                         <td>Overcast</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>7</td>
-                        <td>93</td>
+                        <td>6</td>
+                        <td>95</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>21</td>
                         <td>NNE</td>
-                        <td>90</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>11</td>
-                        <td>11</td>
-                        <td>31</td>
-                        <td>92</td>
+                        <td>Mostly Cloudy</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>16</td>
+                        <td>93</td>
                         <td>0</td>
-                        <td>24</td>
-                        <td>N</td>
-                        <td>85</td>
+                        <td>23</td>
+                        <td>NNE</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>39</td>
-                        <td>88</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>33</td>
+                        <td>100</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>18</td>
                         <td>N</td>
-                        <td>79</td>
+                        <td>73</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,7 +95,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM",
              "09:00 PM"
@@ -121,8 +108,7 @@
                "data":[
                  "12",
                  "12",
-                 "11",
-                 "12"
+                 "10"
                ]
              },
              {
@@ -133,8 +119,7 @@
                "data":[
                  "12",
                  "12",
-                 "11",
-                 "12"
+                 "10"
                ]
              }
            ]
@@ -175,7 +160,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM",
              "09:00 PM"
@@ -186,10 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "7",
-                 "31",
-                 "39"
+                 "6",
+                 "16",
+                 "33"
                ]
              },
              {
@@ -199,8 +182,7 @@
                "data":[
                  "95",
                  "93",
-                 "92",
-                 "88"
+                 "100"
                ]
              },
              {
@@ -208,10 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "90",
-                 "85",
-                 "79"
+                 "88",
+                 "78",
+                 "73"
                ]
              }
            ]
@@ -229,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 17:05:17 2018</p>
+         Last Run: Mon Jul 23 18:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -253,20 +234,20 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>61</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>59</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>36</td>
-                        <td>63</td>
+                        <td>35</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
@@ -277,12 +258,12 @@
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>10</td>
+                        <td>9</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>42</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -390,9 +371,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "38",
-                 "36",
-                 "10"
+                 "37",
+                 "35",
+                 "9"
                ]
              },
              {
@@ -401,7 +382,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "61",
-                 "63",
+                 "62",
                  "70"
                ]
              },
@@ -410,9 +391,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
+                 "57",
                  "50",
-                 "42"
+                 "40"
                ]
              }
            ]
@@ -429,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 17:05:17 2018</p>
+         Last Run: Mon Jul 23 18:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -451,50 +432,50 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
                         <td>45</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>59</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>62</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>1</td>
                         <td>50</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>40</td>
-                        <td>58</td>
+                        <td>41</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -506,7 +487,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -552,9 +533,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "21",
                  "20",
                  "20",
-                 "19",
                  "18",
                  "15"
                ]
@@ -565,9 +546,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "21",
                  "20",
                  "20",
-                 "19",
                  "18",
                  "15"
                ]
@@ -625,7 +606,7 @@
                  "15",
                  "15",
                  "1",
-                 "40",
+                 "41",
                  "43"
                ]
              },
@@ -635,9 +616,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "45",
-                 "47",
+                 "46",
                  "50",
-                 "58",
+                 "57",
                  "68"
                ]
              },
@@ -646,11 +627,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "62",
-                 "52",
-                 "56",
-                 "57"
+                 "51",
+                 "50",
+                 "31",
+                 "50",
+                 "50"
                ]
              }
            ]
@@ -667,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 17:05:17 2018</p>
+         Last Run: Mon Jul 23 18:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -692,11 +673,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>4</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -704,7 +685,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>15</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -716,11 +697,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -728,7 +709,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
@@ -744,7 +725,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>34</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -872,10 +853,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
-                 "33",
-                 "29",
-                 "27",
+                 "38",
+                 "32",
+                 "28",
+                 "26",
                  "26"
                ]
              },
@@ -884,11 +865,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "36",
-                 "36",
+                 "35",
                  "34",
-                 "34"
+                 "33"
                ]
              }
            ]
