--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 18:05:12 2018</p>
+         Last Run: Mon Jul 23 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Edge School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 23, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
+                        <td>08:00 PM</td>
                         <td>Overcast</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>6</td>
-                        <td>95</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>8</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>13</td>
                         <td>NNE</td>
                         <td>88</td>
                      </tr>
                      <tr>
-                        <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>16</td>
-                        <td>93</td>
-                        <td>0</td>
-                        <td>23</td>
-                        <td>NNE</td>
-                        <td>78</td>
-                     </tr>
-                     <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>33</td>
-                        <td>100</td>
+                        <td>Overcast</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>19</td>
+                        <td>90</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>10</td>
                         <td>N</td>
-                        <td>73</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -106,9 +93,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "12",
-                 "12",
-                 "10"
+                 "14",
+                 "12"
                ]
              },
              {
@@ -117,9 +103,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "12",
-                 "12",
-                 "10"
+                 "14",
+                 "12"
                ]
              }
            ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -170,9 +154,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "16",
-                 "33"
+                 "8",
+                 "19"
                ]
              },
              {
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "95",
-                 "93",
-                 "100"
+                 "82",
+                 "90"
                ]
              },
              {
@@ -191,8 +173,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "88",
-                 "78",
-                 "73"
+                 "82"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 18:05:12 2018</p>
+         Last Run: Mon Jul 23 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -234,36 +215,36 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>37</td>
-                        <td>61</td>
+                        <td>35</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>35</td>
-                        <td>62</td>
+                        <td>33</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>9</td>
-                        <td>70</td>
+                        <td>19</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -371,9 +352,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
                  "35",
-                 "9"
+                 "33",
+                 "19"
                ]
              },
              {
@@ -381,9 +362,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
                  "62",
-                 "70"
+                 "64",
+                 "71"
                ]
              },
              {
@@ -391,9 +372,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "50",
-                 "40"
+                 "58",
+                 "48",
+                 "41"
                ]
              }
            ]
@@ -410,7 +391,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 18:05:12 2018</p>
+         Last Run: Mon Jul 23 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -432,14 +413,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>15</td>
                         <td>45</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -456,14 +437,14 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>1</td>
                         <td>50</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>31</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -483,7 +464,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>43</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -533,9 +514,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
+                 "19",
                  "18",
                  "15"
                ]
@@ -546,9 +527,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
+                 "19",
                  "18",
                  "15"
                ]
@@ -619,7 +600,7 @@
                  "46",
                  "50",
                  "57",
-                 "68"
+                 "67"
                ]
              },
              {
@@ -627,9 +608,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
                  "50",
-                 "31",
+                 "50",
+                 "30",
                  "50",
                  "50"
                ]
@@ -648,7 +629,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 18:05:12 2018</p>
+         Last Run: Mon Jul 23 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -673,11 +654,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>4</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -685,7 +666,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>15</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -697,11 +678,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -709,7 +690,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
@@ -721,11 +702,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -853,11 +834,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "32",
-                 "28",
-                 "26",
-                 "26"
+                 "39",
+                 "33",
+                 "29",
+                 "27",
+                 "27"
                ]
              },
              {
@@ -865,11 +846,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
+                 "7",
                  "36",
-                 "35",
+                 "36",
                  "34",
-                 "33"
+                 "34"
                ]
              }
            ]
