--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 19:05:20 2018</p>
+         Last Run: Mon Jul 23 20:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Edge School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 23, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -29,26 +29,14 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>08:00 PM</td>
-                        <td>Overcast</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>8</td>
-                        <td>82</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>NNE</td>
-                        <td>88</td>
-                     </tr>
-                     <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>19</td>
+                        <td>24</td>
                         <td>90</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
                         <td>82</td>
                      </tr>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM"
            ],
            "datasets":[
@@ -93,7 +80,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "14",
                  "12"
                ]
              },
@@ -103,7 +89,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "14",
                  "12"
                ]
              }
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM"
            ],
            "datasets":[
@@ -154,8 +138,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "19"
+                 "24"
                ]
              },
              {
@@ -163,7 +146,6 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
                  "90"
                ]
              },
@@ -172,7 +154,6 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
                  "82"
                ]
              }
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 19:05:20 2018</p>
+         Last Run: Mon Jul 23 20:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -216,11 +197,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>35</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>58</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -228,11 +209,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>33</td>
-                        <td>64</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>48</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -244,7 +225,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>41</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -362,8 +343,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "61",
                  "62",
-                 "64",
                  "71"
                ]
              },
@@ -372,9 +353,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "48",
-                 "41"
+                 "53",
+                 "42",
+                 "37"
                ]
              }
            ]
@@ -391,7 +372,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 19:05:20 2018</p>
+         Last Run: Mon Jul 23 20:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -413,14 +394,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -428,23 +409,23 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
                         <td>1</td>
                         <td>50</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -464,7 +445,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>43</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -514,7 +495,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
+                 "21",
                  "20",
                  "19",
                  "18",
@@ -527,7 +508,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
+                 "21",
                  "20",
                  "19",
                  "18",
@@ -596,11 +577,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
-                 "46",
+                 "44",
+                 "47",
                  "50",
                  "57",
-                 "67"
+                 "69"
                ]
              },
              {
@@ -608,9 +589,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "50",
-                 "30",
+                 "51",
+                 "48",
+                 "29",
                  "50",
                  "50"
                ]
@@ -629,7 +610,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 19:05:20 2018</p>
+         Last Run: Mon Jul 23 20:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -654,11 +635,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>4</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>7</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -666,11 +647,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>15</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -678,11 +659,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -690,7 +671,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
@@ -702,7 +683,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>25</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -834,11 +815,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
-                 "33",
-                 "29",
-                 "27",
-                 "27"
+                 "38",
+                 "32",
+                 "28",
+                 "26",
+                 "25"
                ]
              },
              {
@@ -846,9 +827,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "36",
-                 "36",
+                 "5",
+                 "35",
+                 "35",
                  "34",
                  "34"
                ]
