--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 21:05:22 2018</p>
+         Last Run: Mon Jul 23 22:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>35</td>
-                        <td>61</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>41</td>
+                        <td>66</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNE</td>
-                        <td>53</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>33</td>
-                        <td>62</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>35</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>42</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>19</td>
-                        <td>71</td>
+                        <td>21</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,8 +106,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
-                 "17",
+                 "16",
+                 "16",
                  "15"
                ]
              },
@@ -117,8 +117,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
-                 "17",
+                 "16",
+                 "16",
                  "15"
                ]
              }
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "41",
                  "35",
-                 "33",
-                 "19"
+                 "21"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "62",
-                 "71"
+                 "66",
+                 "67",
+                 "75"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "42",
-                 "37"
+                 "57",
+                 "50",
+                 "38"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 21:05:22 2018</p>
+         Last Run: Mon Jul 23 22:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,7 +246,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -255,14 +255,14 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>1</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -270,7 +270,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>41</td>
-                        <td>58</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -282,7 +282,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>43</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -334,7 +334,7 @@
                "data":[
                  "21",
                  "20",
-                 "19",
+                 "20",
                  "18",
                  "15"
                ]
@@ -347,7 +347,7 @@
                "data":[
                  "21",
                  "20",
-                 "19",
+                 "20",
                  "18",
                  "15"
                ]
@@ -415,10 +415,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "47",
-                 "50",
-                 "58",
-                 "69"
+                 "46",
+                 "49",
+                 "56",
+                 "68"
                ]
              },
              {
@@ -426,9 +426,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "48",
-                 "29",
+                 "28",
                  "50",
                  "50"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 21:05:22 2018</p>
+         Last Run: Mon Jul 23 22:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -481,26 +481,26 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>15</td>
                         <td>32</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>36</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>15</td>
                         <td>28</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -508,7 +508,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
@@ -520,7 +520,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -571,8 +571,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "23",
-                 "24",
                  "25",
+                 "26",
                  "26",
                  "26"
                ]
@@ -584,8 +584,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "23",
-                 "24",
                  "25",
+                 "26",
                  "26",
                  "26"
                ]
@@ -655,8 +655,8 @@
                  "38",
                  "32",
                  "28",
-                 "27",
-                 "26"
+                 "26",
+                 "25"
                ]
              },
              {
@@ -666,7 +666,7 @@
                "data":[
                  "6",
                  "36",
-                 "36",
+                 "35",
                  "34",
                  "34"
                ]
