--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 03:05:23 2018</p>
+         Last Run: Tue Jul 24 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>34</td>
-                        <td>70</td>
+                        <td>24</td>
+                        <td>71</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>74</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>16</td>
                         <td>16</td>
                         <td>10</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>61</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>10</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>8</td>
                         <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>49</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -108,7 +108,7 @@
                "data":[
                  "16",
                  "16",
-                 "15"
+                 "14"
                ]
              },
              {
@@ -119,7 +119,7 @@
                "data":[
                  "16",
                  "16",
-                 "15"
+                 "14"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
+                 "24",
                  "10",
-                 "10"
+                 "8"
                ]
              },
              {
@@ -180,8 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "70",
+                 "71",
+                 "71",
                  "76"
                ]
              },
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "61",
-                 "49"
+                 "73",
+                 "63",
+                 "50"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 03:05:23 2018</p>
+         Last Run: Tue Jul 24 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,7 +246,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -258,7 +258,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -269,8 +269,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>36</td>
-                        <td>55</td>
+                        <td>35</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -281,8 +281,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>41</td>
-                        <td>68</td>
+                        <td>42</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -405,8 +405,8 @@
                  "15",
                  "15",
                  "15",
-                 "36",
-                 "41"
+                 "35",
+                 "42"
                ]
              },
              {
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "43",
                  "44",
-                 "45",
-                 "48",
-                 "55",
-                 "68"
+                 "47",
+                 "54",
+                 "66"
                ]
              },
              {
@@ -426,7 +426,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
+                 "44",
                  "48",
                  "48",
                  "50",
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 03:05:23 2018</p>
+         Last Run: Tue Jul 24 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
