--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 03:05:03 2018</p>
+         Last Run: Wed Jul 25 04:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
+                 "44",
                  "45",
                  "48",
                  "57",
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 03:05:03 2018</p>
+         Last Run: Wed Jul 25 04:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -272,10 +272,10 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>12</td>
                      </tr>
                      <tr>
@@ -284,9 +284,9 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>5</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>15</td>
                      </tr>
@@ -299,7 +299,7 @@
                         <td>33</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>15</td>
                      </tr>
                      <tr>
@@ -308,7 +308,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>7</td>
                         <td>11</td>
                         <td>N</td>
@@ -320,7 +320,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>13</td>
                         <td>N</td>
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
-                 "37",
+                 "44",
+                 "36",
                  "33",
-                 "31",
-                 "30"
+                 "30",
+                 "29"
                ]
              },
              {
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 03:05:03 2018</p>
+         Last Run: Wed Jul 25 04:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
