--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 22:05:10 2018</p>
+         Last Run: Wed Jul 25 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -38,55 +38,55 @@
                         <td>4</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>0</td>
-                        <td>38</td>
+                        <td>3</td>
+                        <td>39</td>
                         <td>5</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
+                        <td>4</td>
                         <td>34</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>16</td>
+                        <td>ENE</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
+                        <td>4</td>
                         <td>32</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>0</td>
+                        <td>3</td>
                         <td>31</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -203,10 +203,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "0",
-                 "2",
-                 "2",
-                 "0"
+                 "3",
+                 "4",
+                 "4",
+                 "3"
                ]
              },
              {
@@ -215,7 +215,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "38",
+                 "39",
                  "34",
                  "32",
                  "31"
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
+                 "12",
+                 "18",
                  "17",
-                 "16",
-                 "14",
-                 "13"
+                 "15",
+                 "14"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 22:05:10 2018</p>
+         Last Run: Wed Jul 25 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -284,11 +284,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>17</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -436,7 +436,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "43",
-                 "47",
+                 "46",
                  "52",
                  "60"
                ]
@@ -447,7 +447,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "55",
-                 "58",
+                 "59",
                  "53",
                  "56"
                ]
